[package]
name = "nimbus-bn2-tweaks"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
xplm = { git = "https://github.com/samcrow/rust-xplm", branch = "master" }

[build-dependencies]
vergen = { version = "8", features = ["build", "cargo"] }

[profile.dev]
opt-level = 2

[profile.dev.package."*"]
opt-level = 3

[lib]
crate-type = ["cdylib"]
bench = false
